Clean up TOTALCMD

--- a/os/Cygwin/GHISLER/work.ini
+++ b/os/Cygwin/GHISLER/work.ini
@@ -1,8 +1,4 @@
 [searches]
-Trados Translation Memory Files_SearchFor=*.iix;*.mdf;*.mtf;*.mwf;*.tmw
-Trados Translation Memory Files_SearchIn=
-Trados Translation Memory Files_SearchText=
-Trados Translation Memory Files_SearchFlags=0|000002000020|||||||||0000
 Backup_SearchFor=*.bak;*.---;*.gid;mscreate.dir;*.swp;*.tmp;t;*~;~$*.*
 Backup_SearchIn=
 Backup_SearchText=
@@ -33,88 +29,26 @@ Images_SearchText=
 Images_SearchFlags=0|000002000020||||||||22220|0000|
 
 [Alias]
-:cgm2iso=em_CGM2ISO
-:combine=cm_Combine
-:crc-check=cm_CRCcheck
-:crc-create=cm_CRCcreate
-:decode=cm_Decode
-:ftplist=cm_FtpDownloadList
-:iso2cgm=em_ISO2CGM
-:iso2txt=em_ISO2TXT
-:load-sel=cm_LoadSelectionFromFile
-:options=cm_Config
-:optkeys=cm_Confirmation
-:optlang=cm_LanguageConfig
-:optplug=cm_PluginsConfig
-:save-sel=cm_SaveSelectionToFile
-:split=cm_Split
-:txt2iso=em_TXT2ISO
-:ttx2x=em_TTX2X
-b=em_SendToSDLTradosTranslatorsWorkbenchDialog
-dfs=cm_GetFileSpace
-ido=em_SendToTRADOBEINDECS
 ln=cm_CreateShortcut
-mcp=em_CopyToMultipleFolders
 
 [DirMenu]
-menu1=-F&iler
-menu2=F&iler
-cmd2=cd \\Filer
-menu3=&Archive
-cmd3=cd \\Filer\Archive
-menu4=&Clients
-cmd4=cd \\Filer\Clients
+menu1=F&iler
+cmd1=cd \\Filer
+menu2=Pro&jects
+cmd2=cd \\Filer\Projects
+menu3=&Control Panel
+cmd3=cm_OpenControls
+menu4=&Drives
+cmd4=cm_OpenDrives
 menu5=&Home
-cmd5=cd \\Filer\Users\NWeibull
-menu6=I&nstructions
-cmd6=cd \\Filer\Instructions
-menu7=Inte&rnal
-cmd7=cd \\Filer\Internal
-menu8=&Marketing
-cmd8=cd \\Filer\Marketing
-menu9=&Old
-cmd9=cd \\Filer\Old
-menu10=&Programs
-cmd10=cd \\Filer\Programs
-menu11=Pro&jects
-cmd11=cd \\Filer\Projects
-menu12=&Templates
-cmd12=cd \\Filer\Templates
-menu13=T&emporary
-cmd13=cd \\Filer\Temporary
-menu14=--
-menu15=-S&pecial
-menu16=&Control Panel
-cmd16=cm_OpenControls
-menu17=Des&ktop
-cmd17=cm_OpenDesktop
-menu18=&Drives
-cmd18=cm_OpenDrives
-menu19=&Home
-cmd19=cd %$USERPROFILE%
-menu20=T&emporary
-cmd20=cd %$TMP%
-menu21=--
-menu22=&Environment
-cmd22=cd \\\Environment Variables
-menu23=&Home
-cmd23=cd %$HOME%
-menu24=Regi&stry
-cmd24=cd \\\Registry
-menu25=-&Gems
-menu26=&Local
-cmd26=cd C:\Ruby19\lib\ruby\gems\1.9.1
-menu27=&Gothenburg
-cmd27=cd \\Filer\Programs\Ruby19\lib\ruby\gems\1.9.1
-menu28=&Norway
-cmd28=cd \\10.100.3.24\ames-ruby$\Ruby19\lib\ruby\gems\1.9.1
-menu29=--
-menu30=-&Norway
-menu31=&Norway
-cmd31=cd \\10.100.3.22\cta-kunder$
-menu32=&Programs
-cmd32=cd \\10.100.3.24\ames-ruby$
-menu33=Pro&jects
-cmd33=cd \\10.100.3.22\cta-kunder$\Projects
-menu34=&Templates
-cmd34=cd \\10.100.3.22\cta-kunder$\Templates
+cmd5=cd %$HOME%
+menu6=&Profile
+cmd6=cd %$USERPROFILE%
+menu7=&Environment
+cmd7=cd \\\Environment Variables
+menu8=Regi&stry
+cmd8=cd \\\Registry
+menu9=&Norway
+cmd9=cd \\10.100.3.22\cta-kunder$
+menu10=N&orway Programs
+cmd10=cd \\10.100.3.24\ames-ruby$
