--- a/os/Cygwin/GHISLER/totalcmd.ini
+++ b/os/Cygwin/GHISLER/totalcmd.ini
@@ -7,19 +7,18 @@ AlwaysUnpackInBackground=2
 AutoComplete=0
 Autotreechange=1
 CompareIgnoreRepSpace=0
-CopyComments=14
 CopyHugeBlockSize=10240
 CopyHugeBlockSizeOther=256
 CountMarked=0
+CountSpace=1
 DirBrackets=0
 DirTabOptions=780
-DriveLib=%$APPDATA%\GHISLER\tango_shell32.dll
 Editor=c:/bin/zsh -c '/bin/emacsclient --no-wait "$(/bin/cygpath -u "$(/bin/cygpath -ml $*)")"' e
 FirstTime=0
 FirstTimeUnpack=0
 FirstTimeZIP=0
-IconLib=%$APPDATA%\GHISLER\tango.icl
-IconsOnNet=1
+IconOverlays=1
+IconsOnNet=0
 IgnoreListFile=%$APPDATA%\GHISLER\tcignore.txt
 KeyPath=%$APPDATA%\GHISLER
 LanguageIni=wcmd_now.lng
@@ -29,79 +28,23 @@ PluginBaseDir=%$APPDATA%\GHISLER\plugins
 RenameSelOnlyName=1
 RestrictInterface=1
 ShowCentury=0
+ShowEXEandLNKicons=2
 ShowHiddenSystem=1
-Small83Names=0
+Showicons=2
 SoundDelay=-10
 StartupScreen=0
-Tips=1
+SyncButtons=55
+SyncFlags=3
+ThumbsLocation=%$LOCAL_APPDATA%\GHISLER
 TreeFileLocation=nul
 UseRightButton=0
 UseTrash=0
 WatchDirs=19
 WatchDirsExclude=AB
 Win95Delete=0
-ZipUnicode=1
 
-ThreadFindFirst=1
-
-SyncButtons=55
-SyncFlags=3
-LastRunAs=AMESTO-SE\Administrator
-Test=93
-
-1hourdif=0
-CompareCaseSensitive=0
-CountSpace=1
-DriveisCD=D
-IconOverlays=0
-IgnoreListFileEnabled=1
-Lastmd5=0
-UnicodeListWarn=1
-Viewer=none
-firstmnu=1349
-onlyonce=0
-Savepath=1
-Savepanels=1
-MarkDirectories=1
-AlwaysToRoot=0
-SingleClickStart=0
-SaveCommands=1
-SaveHistory=1
-UseLongNames=1
-OldStyleTree=0
-ShowParentDirInRoot=0
-SortDirsByName=1
-FileTipWindows=0
-Win32TipWindows=1
-SortUpper=0
-ThumbsCopyDel=1
-ThumbsCustomFieldsEnabled=1
-ThumbsLocation=%$LOCAL_APPDATA%\GHISLER
-ThumbOptions=15
-ThumbExplTypes=*.* | *.htm *.html
-ThumbPlgTypes=*.*
-ThumbIrfXnTypes=*.*
-ThumbTxtTypes=*.txt *.ini
-Viewertype=1
-SizeStyle=0
-SizeFooter=1
-TrayIcon=0
-LogOptions=7198
-LogRotateLimit=0
-LogKeepCount=30
-DirTabLimit=32
-ExplorerForCopy=0
-QuickSearchMatchBeginning=1
-QuickSearchExactMatch=0
-SeparateTree=0
-PanelsVertical=0
-CompareIgnoreRepeatedLines=0
-CompareVertical=0
-IconsSpecialFolders=3
-Showicons=2
-ShowEXEandLNKicons=2
-IconsInMenus=0
 InstallDir=C:\Program\totalcmd
+Test=93
 
 [Layout]
 BreadCrumbBar=1
@@ -131,7 +74,7 @@ SmallIcons=1
 [user]
 
 [CustomFields]
-Titles=Write &Date|&Attributes|File&name Encoding|&Encoding|&Locks|Si&ze
+Titles=Write &Date|&Attributes|File&name Encoding|&Encoding|&Locks
 
 AutoLoad=1
 
@@ -160,11 +103,6 @@ Headers5=Locked
 Contents5=[=unicodetest.Locked test]
 Options5=720|0
 
-Widths6=103,30,-50,-20,-20
-Headers6=Size\nDirectories\nFiles
-Contents6=[=dirsizecalc.Size]\n[=dirsizecalc.Directory Count]\n[=dirsizecalc.File Count]
-Options6=720|0
-
 [Tabstops]
 0=217
 1=666
@@ -176,339 +114,71 @@ Options6=720|0
 AdjustWidth=1
 
 
-[1024x768 (8x16)]
-x=152
-y=114
-dx=720
-dy=540
-maximized=0
-Divider=500
-DividerQuickView=500
-CompareX=152
-CompareY=114
-CompareDX=720
-CompareDY=540
-CompareMax=0
-CompareDivider=500
-PrintX=152
-PrintY=114
-PrintDX=720
-PrintDY=540
-PrintMax=0
-RenameX=152
-RenameY=114
-RenameDX=720
-RenameDY=540
-RenameMax=0
-; old name (=0) | ext | new name | size | date | location
-RenameTabs=360,360,999,999,999
-SyncX=152
-SyncY=114
-SyncDX=720
-SyncDY=540
-SyncMax=0
-; name (=0) | size | date | <=> | date 335 | size | name
-SyncTabs=164,254,348,372,466,556
-MenuChangeX=152
-MenuChangeY=114
-MenuChangeDX=720
-MenuChangeDY=540
-MenuChangeMax=0
-SearchX=152
-SearchY=114
-SearchDX=720
-SearchDY=274
-SearchMax=0
-TreeDlgX=152
-TreeDlgY=175
-TreeDlgDX=720
-TreeDlgDY=479
-TreeDlgMax=0
-FontName=Tahoma
-FontSize=8
-FontWeight=400
-FontNameWindow=Tahoma
-FontSizeWindow=8
-FontWeightWindow=400
-CompFontName=DejaVu Sans Mono
-CompFontSize=9
-CompFontStyle=400
-CompCharSet=0
-Tabstops=218,666,666,159,480,93
-Iconsize32=16
-CustColumnX=228
-CustColumnY=143
-CustColumnDX=559
-CustColumnDY=450
-CustColumnMax=0
-FontNameDialog=Tahoma
-DividerComments=500
-FontCharsetWindow=1
-CmdSelX=152
-CmdSelY=114
-CmdSelDX=720
-CmdSelDY=540
-CmdSelMax=0
-ConnectX=255
-ConnectY=221
-ConnectDX=514
-ConnectDY=326
-ConnectMax=0
-
-[1280x1024 (8x16)]
-x=240
-y=312
-dx=800
-dy=400
-maximized=0
-Divider=500
-DividerQuickView=500
-FontSize=7
-FontName=Verdana
-FontSizeWindow=7
-FontNameWindow=Verdana
-FontWeight=400
-FontWeightWindow=400
-Iconsize32=16
-Tabstops=248,682,682,180,533,93
-CompareX=241
-CompareY=312
-CompareDX=800
-CompareDY=400
-CompareDivider=500
-CompareMax=0
-CompFontName=Courier New
-Compfontsize=10
-CompCharSet=0
-CompFontStyle=400
-MenuChangeX=241
-MenuChangeY=312
-MenuChangeDX=800
-MenuChangeDY=400
-MenuChangeMax=0
-PrintX=400
-PrintY=400
-PrintDX=800
-PrintDY=400
-RenameX=241
-RenameY=312
-RenameDX=800
-RenameDY=400
-RenameMax=0
-; old name (=0) | ext | new name | size | date | location
-RenameTabs=400,400,999,999,999
-SearchX=480
-SearchY=252
-SearchDX=486
-SearchDY=244
-SearchMax=0
-SyncX=241
-SyncY=312
-SyncDX=800
-SyncDY=400
-SyncMax=0
-; name (=0) | size | date | <=> | date 335 | size | name
-SyncTabs=200,292,387,413,508,600
-TreeDlgX=600
-TreeDlgY=400
-TreeDlgDX=400
-TreeDlgDY=400
-TreeDlgMax=0
-DividerComments=500
-
-[1600x1200 (8x16)]
-x=400
-y=400
-dx=800
-dy=400
-maximized=0
-Divider=500
-DividerQuickView=500
-FontSize=7
-FontName=Verdana
-FontSizeWindow=7
-FontNameWindow=Verdana
-FontWeight=400
-FontWeightWindow=400
-Iconsize32=16
-Tabstops=248,682,682,180,533,93
-CompareX=400
-CompareY=400
-CompareDX=800
-CompareDY=400
-CompareDivider=500
-CompareMax=0
-CompFontName=IBMPC
-Compfontsize=9
-CompCharSet=255
-CompFontStyle=400
-MenuChangeX=400
-MenuChangeY=400
-MenuChangeDX=800
-MenuChangeDY=400
-MenuChangeMax=0
-PrintX=400
-PrintY=400
-PrintDX=800
-PrintDY=400
-RenameX=400
-RenameY=400
-RenameDX=800
-RenameDY=400
-RenameMax=0
-; old name (=0) | ext | new name | size | date | location
-RenameTabs=400,400,999,999,999
-SearchX=557
-SearchY=478
-SearchDX=486
-SearchDY=244
-SearchMax=0
-SyncX=400
-SyncY=400
-SyncDX=800
-SyncDY=400
-SyncMax=0
-; name (=0) | size | date | <=> | date 335 | size | name
-SyncTabs=200,292,387,413,508,600
-TreeDlgX=600
-TreeDlgY=400
-TreeDlgDX=400
-TreeDlgDY=400
-TreeDlgMax=0
-DividerComments=500
-
-[1680x1050 (8x16)]
-x=1845
-y=315
-dx=720
-dy=1050
-maximized=1
-Divider=500
-DividerQuickView=500
-CompareX=1845
-CompareY=315
-CompareDX=720
-CompareDY=1050
-CompareMax=1
-CompareDivider=500
-PrintX=1845
-PrintY=315
-PrintDX=720
-PrintDY=1050
-PrintMax=1
-RenameX=1845
-RenameY=315
-RenameDX=720
-RenameDY=1050
-RenameMax=1
-; old name (=0) | ext | new name | size | date | location
-RenameTabs=360,360,999,999,720
-SyncX=1845
-SyncY=315
-SyncDX=720
-SyncDY=1050
-SyncMax=1
-; name (=0) | size | date | <=> | date 335 | size | name
-SyncTabs=164,254,348,372,466,556
-MenuChangeX=1845
-MenuChangeY=315
-MenuChangeDX=720
-MenuChangeDY=1050
-MenuChangeMax=0
-SearchX=1845
-SearchY=315
-SearchDX=720
-SearchDY=756
-SearchMax=1
-TreeDlgX=1845
-TreeDlgY=315
-TreeDlgDX=720
-TreeDlgDY=1050
-TreeDlgMax=1
-FontName=Tahoma
-FontSize=8
-FontWeight=400
-FontNameWindow=Tahoma
-FontSizeWindow=8
-FontWeightWindow=400
-CompFontName=DejaVu Sans Mono
-CompFontSize=9
-CompFontStyle=400
-CompCharSet=0
-Tabstops=220,666,666,159,480,93
-Iconsize32=16
-CustColumnX=228
-CustColumnY=143
-CustColumnDX=559
-CustColumnDY=450
-CustColumnMax=0
-FontNameDialog=Tahoma
-DividerComments=500
-CmdSelX=1845
-CmdSelY=315
-CmdSelDX=720
-CmdSelDY=1050
-CmdSelMax=1
-ConnectX=1948
-ConnectY=657
-ConnectDX=514
-ConnectDY=326
-ConnectMax=0
-
 [1080x1920 (8x16)]
 maximized=1
 FontName=Tahoma
-FontSize=8
 FontWeight=400
-FontNameWindow=Tahoma
-FontSizeWindow=8
 FontWeightWindow=400
 FontNameDialog=Tahoma
 Tabstops=342,669,669,-1,725,93
 
+CompFontName=DejaVu Sans Mono
+CompFontSize=9
+CompareMax=1
+CompareX=0
+CompareY=0
+CompareDX=0
+CompareDY=0
+
+RenameMax=1
+; old name (=0) | ext | new name | size | date | location
+RenameTabs=538,538,1100,1100,1100
+RenameX=0
+RenameY=0
+RenameDX=0
+RenameDY=0
+
+SearchMax=1
+SearchX=0
+SearchY=0
+SearchDX=0
+SearchDY=0
+
+SyncMax=1
+; name (=0) | size (w75) | date (w95) | <=> (w16) | date (w95) | size (w75) | name
+SyncTabs=360,435,530,546,641,716
+SyncX=0
+SyncY=0
+SyncDX=0
+SyncDY=0
+
 [Lister]
-x=1845
-y=315
-dx=719
-dy=1049
-Startup=32
+Maximized=1
+textwidth=79
+Caret=0
+CenterBitmap=1
 Font1=DejaVu Sans Mono,-12
 Font2=DejaVu Sans Mono,-12
 Font3=Verdana,-11
-Font4=IBMPC,-12
+Font4=DejaVu Sans Mono,-12
 Font5=DejaVu Sans,9
-textwidth=79
-LinkBraces=1
-Maximized=1
-Wrap=0
-
-BmpStartup=1
-Caret=0
-CenterBitmap=1
-HTMLasText=1
 IView=0
-IViewPath=
-Multimedia=1
-RTF=1
-SearchGoBack=3
-binwidth=75
-LeftMargin=200
-RightMargin=200
-TopMargin=200
-BottomMargin=200
+Startup=32
+Wrap=0
 
 [PrintDir]
 FontName=DejaVu Sans Mono
 FontSize=8
-FontFlags=
-TopMargin=50
-HeaderMargin=50
-BottomMargin=50
 HeaderText=
-LeftMargin=200
-RightMargin=200
 
 [Colors]
+BackColor=-1
+BackColor2=-1
+ForeColor=-1
+MarkColor=-1
+CursorColor=6773579
+CursorText=-1
+
 ColorFilter1=>Link
 ColorFilter1Color=12628096
 ColorFilter2=>Archives
@@ -524,16 +194,6 @@ ColorFilter6Color=12632256
 ColorFilter7=>Uninteresting
 ColorFilter7Color=12632256
 
-BackColor=-1
-BackColor2=-1
-CursorColor=6773579
-CursorText=-1
-MarkColor=-1
-
-ForeColor=-1
-InverseCursor=0
-InverseSelection=0
-
 [Confirmation]
 DeleteDirs=0
 OverwriteFiles=0
@@ -547,18 +207,6 @@ C+2=cm_SrcActivateTab2
 C+3=cm_SrcActivateTab3
 C+4=cm_SrcActivateTab4
 C+5=cm_SrcActivateTab5
-
-CS+1=cm_TrgActivateTab1
-CS+2=cm_TrgActivateTab2
-CS+3=cm_TrgActivateTab3
-CS+4=cm_TrgActivateTab4
-CS+5=cm_TrgActivateTab5
-
-CS+F3=cm_SrcSortByCol1
-CS+F4=cm_SrcSortByCol2
-CS+F5=cm_SrcSortByCol3
-CS+F6=cm_SrcSortByCol4
-CS+F7=cm_SrcUnsorted
 
 C+PGUP=cm_SwitchToPreviousTab
 C+PGDN=cm_SwitchToNextTab
@@ -597,15 +245,12 @@ A+F1=cm_LeftPathFocus
 A+F2=cm_RightPathFocus
 CA+F5=cm_PackFiles
 CAS+F5=cm_PackFiles
-CS+F12=cm_SrcUserSpec
 CA+F=cm_FtpDisconnect
 SA+ENTER=cm_OpenAsUser
 AS+F2=cm_DirMatch
 CS+F9=cm_PrintDirSub
 CA+F2=cm_CompareFilesByContent
 S+F2=cm_CompareDirsWithSubdirs
-AS+P=cm_GoToFirstFile
-CAS+DOWN=cm_GotoNextSelected
 CA+F9=cm_TestArchive
 CS+F2=cm_FileSync
 C+F7=cm_SrcLong
@@ -615,46 +260,14 @@ CA+ENTER=cm_Properties
 
 CS+Y=cm_Associate
 
-C+F1=em_DoNothing
-CS+F1=em_DoNothing
-CS+F2=em_DoNothing
-C+F8=em_DoNothing
-A+F10=em_DoNothing
-C+F11=em_DoNothing
-C+F12=em_DoNothing
-CS+M=em_DoNothing
-C+Q=em_DoNothing
-C+Z=em_DoNothing
-
 [Packer]
-ACE=%$APPDATA%\GHISLER\packers\ace\ACE32.EXE
-ARJ=%$APPDATA%\GHISLER\packers\arj\ARJ.EXE
-LHA=%$APPDATA%\GHISLER\packers\lha\Lha32.exe
 RAR=%$APPDATA%\GHISLER\packers\rar\Rar.exe
-UC2=%$APPDATA%\GHISLER\packers\uc\uc.exe
-UnZIP=%$APPDATA%\GHISLER\packers\zip\PKUNZIP.EXE
-ZIP=%$APPDATA%\GHISLER\packers\zip\Pkzip.exe
-ARJlongnames=1
-OpenPartial=1
 
+ARJlongnames=1
 DefPlugin=7z
 InternalZipRate=9
-LastUsedPacker=1
-
-InternalUnarj=1
-InternalUnlzh=1
-InternalUnrar=1
-InternalUnace=1
-InternalUnzip=1
-InternalZip=1
-nodelete=0
-LinuxCompatible=1
-UnZIPOverwrite=0
-Zip83Name=0
-ZIPDirectoryOfFile=1
-ZIPlikeDirectory=1
-zipnt=0
-ZipSetDateToNewest=0
+OpenPartial=1
+ZipUnicode=1
 
 [PackerPlugins]
 7z=95,%$APPDATA%\GHISLER\plugins\wcx\7zip\7zip.wcx
