Use GhostScript Lite

--- a/os/Cygwin/GHISLER/lsplugin.ini
+++ b/os/Cygwin/GHISLER/lsplugin.ini
@@ -1,6 +1,6 @@
 [gswlx]
-gsdll_path=%ProgramFiles%\gs\gs9.01\bin\gsdll32.dll
-gslib_path=%ProgramFiles%/gs/gs9.01/lib;%ProgramFiles%/gs/fonts
+gsdll_path=%ProgramFiles%\GhostScriptLite\Bin\gsdll32.dll
+gslib_path=%ProgramFiles%/GhostScriptLite/Lib
 gs_options=
 sample_string=The quick brown fox jumps over the lazy dog.
 translate_ui=0
