Save MOV metadata when re-encoding

--- a/bin/mov-re-encode.in
+++ b/bin/mov-re-encode.in
@@ -23,29 +23,30 @@ done
 
 integer retval=0
 for file in $files; do
-  local reencodedstamp=; reencodedstamp=$(ffprobe -loglevel error \
-    -print_format default=nokey=1:noprint_wrappers=1 \
-    -show_entries format_tags=date-re-encoded $file) || { retval=1; continue }
-  if [[ -n $reencodedstamp ]]; then
+  local txt=$file:r.txt
+  if [[ -e $txt ]]; then
     print -r -- $(basename $0): $file: already re-encoded
     continue
   fi
   local filestamp=; filestamp=$(stat -t %Y%m%d%H%M.%S -f %Sm $file) || { retval=1; continue }
-  local reencodedstamp=; reencodedstamp=$(date +%Y-%m-%dT%H:%M:%S%z) || { retval=1; continue }
-  local tmp=; tmp=$(mktemp "$(dirname $file)/mov-re-encode.XXXXXX") || { retval=1; continue }
-  # TODO Then add said metadata to all that’s been reencoded in the past
+  local txttmp=; txttmp=$(mktemp "$(dirname $txt)/mov-re-encode.txt.XXXXXX") || { retval=1; continue }
+  ffmpeg -loglevel error -y -i $file -f ffmetadata $txttmp || { retval=1; rm -f $txttmp; continue }
+  local filetmp=; filetmp=$(mktemp "$(dirname $file)/mov-re-encode.mov.XXXXXX") || { rm -f $txttmp; retval=1; continue }
   # -s 852x480 \
   #  -b:v 1290k \
   # TODO ffmpeg doesn’t copy unknown metadata and doesn’t allow you to set arbitrary metadata, not in mov at least
   { ffmpeg \
-    -i $file \
-    -codec:a libmp3lame -codec:v libx264 -f mov \
-    -map_metadata 0 \
-    -metadata date-re-encoded=$reencodedstamp \
+    -loglevel error \
     -y \
+    -i $file \
+    -codec:a libmp3lame \
+    -codec:v libx264 \
+    -f mov \
+    -map_metadata 0 \
     "$opts[@]" \
-    $tmp &&
-    touch -m -t $filestamp $tmp &&
-    mv $tmp $file } || { rm -f $tmp; retval=1; continue }
+    $filetmp &&
+    touch -m -t $filestamp $filetmp &&
+    mv $txttmp $txt } || { rm -f $txttmp $filetmp; retval=1; continue }
+  mv $filetmp $file || { rm -f $txt $filetmp; retval=1; continue }
 done
 exit $retval
