Make paths in .gitignore absolute

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,24 @@
 Environment
-bin/asciitable
-bin/backup-home
-bin/burn
-bin/clipboard
-bin/create-key
-bin/dfs
-bin/discogs-tags
-bin/duh
-bin/e
-bin/emv
-bin/g
-bin/index-disc
-bin/m
-bin/mfedit
-bin/mov-re-encode
-bin/pack
-bin/terminal-colors
-bin/unpack
-bin/update-context
-bin/valgrind-ruby
+/bin/asciitable
+/bin/backup-home
+/bin/burn
+/bin/clipboard
+/bin/create-key
+/bin/dfs
+/bin/discogs-tags
+/bin/duh
+/bin/e
+/bin/emv
+/bin/g
+/bin/index-disc
+/bin/m
+/bin/mfedit
+/bin/mov-re-encode
+/bin/pack
+/bin/terminal-colors
+/bin/unpack
+/bin/update-context
+/bin/valgrind-ruby
 config.mk
 /emacs/site-lisp/userloaddefs.el~
 *.elc
