--- a/os/Cygwin/GHISLER/work.ini
+++ b/os/Cygwin/GHISLER/work.ini
@@ -1,32 +1,12 @@
 [searches]
-Backup_SearchFor=*.bak;*.---;*.gid;mscreate.dir;*.swp;*.tmp;t;*~;~$*.*
-Backup_SearchIn=
-Backup_SearchText=
-Backup_SearchFlags=0|000002000020||||||||22220|0000|
-Archives_SearchFor=*.tar;*.tgz;*.bz2;*.zip;*.rar;*.arj;*.taz;*.lzh;*.rpm;*.deb;*.gz;*.z;*.Z;*.tbz2;*.ace;*.cab;*.7z
-Archives_SearchIn=
-Archives_SearchText=
-Archives_SearchFlags=0|000002000020||||||||22220|0000|
 Link_SearchFor=*.lnk;*.url
 Link_SearchIn=
 Link_SearchText=
 Link_SearchFlags=0|000002000020||||||||22220|0000|
-Audio_SearchFor=*.mp3;*.ogg;*.wav;*.rm;*.wma
-Audio_SearchIn=
-Audio_SearchText=
-Audio_SearchFlags=0|000002000020||||||||22220|0000|
-Video_SearchFor=*.mpg;*.mpeg;*.avi;*.mov;*.swf;*.ram;*.asf;*.m2v;*.wmv;*.mp4;*.ogm;*.divx
-Video_SearchIn=
-Video_SearchText=
-Video_SearchFlags=0|000002000020||||||||22220|0000|
-Uninteresting_SearchFor=*.org;*.lck;*.cmp
+Uninteresting_SearchFor=*.bak;*.o;*.swp;*.tmp;*~;~$*.*
 Uninteresting_SearchIn=
 Uninteresting_SearchText=
 Uninteresting_SearchFlags=0|000002000020||||||||22220|0000|
-Images_SearchFor=*.jpg;*.jpeg;*.png;*.gif;*.bmp;*.ppm;*.tga;*.xbm;*.xpm;*.tif;*.tiff;*.xcf;*.ai;*.eps
-Images_SearchIn=
-Images_SearchText=
-Images_SearchFlags=0|000002000020||||||||22220|0000|
 
 [Alias]
 ln=cm_CreateShortcut
