Fix layout for 1366-wide displays

--- a/os/Cygwin/GHISLER/wincmd.ini
+++ b/os/Cygwin/GHISLER/wincmd.ini
@@ -111,6 +111,43 @@ Options5=720|0
 5=93
 AdjustWidth=1
 
+[1366x768 (8x16)]
+maximized=1
+FontName=Tahoma
+FontWeight=400
+FontWeightWindow=400
+FontNameDialog=Tahoma
+Tabstops=431,843,843,-1,914,117
+
+CompFontName=DejaVu Sans Mono
+CompFontSize=9
+CompareMax=1
+CompareX=0
+CompareY=0
+CompareDX=0
+CompareDY=0
+
+RenameMax=1
+; old name (=0) | ext | new name | size | date | location
+RenameTabs=678,678,1386,1386,1386
+RenameX=0
+RenameY=0
+RenameDX=0
+RenameDY=0
+
+SearchMax=1
+SearchX=0
+SearchY=0
+SearchDX=0
+SearchDY=0
+
+SyncMax=1
+; name (=0) | size (w75) | date (w95) | <=> (w16) | date (w95) | size (w75) | name
+SyncTabs=454,548,668,688,808,902
+SyncX=0
+SyncY=0
+SyncDX=0
+SyncDY=0
 
 [1080x1920 (8x16)]
 maximized=1
