Change Apache configuration

--- a/host/portair.local/etc/apache2/users/now.conf
+++ b/host/portair.local/etc/apache2/users/now.conf
@@ -1,18 +1,22 @@
-<Directory "/Users/now/Sites/">
+<Directory /Users/now/Sites/>
   Options Indexes MultiViews
-  Order Allow,Deny
-  Allow from all
+  Require all granted
 </Directory>
 
-<Directory "/Users/now/Sites/dav/">
+<Directory /Users/now/Sites/dav/>
   Dav On
 
   AuthType Digest
   AuthName DAV-now
 
-  AuthUserFile "/Users/now/Sites/dav.passwd"
+  AuthUserFile /Users/now/Sites/dav.passwd
 
   <LimitExcept OPTIONS>
-    require user now
+    Require user now
   </LimitExcept>
 </Directory>
+
+<VirtualHost *:80>
+  ServerName disu.localhost
+  DocumentRoot /Users/now/Sites/disu.se/www
+</VirtualHost>
