--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
+.dirstamp
+/.build/
 /Environment
+/Makefile
 /bin/a
 /bin/aa
 /bin/asciitable
@@ -23,7 +26,11 @@
 /bin/unpack
 /bin/update-context
 /bin/valgrind-ruby
+/build/install-sh
+/config.log
 config.mk
+/config.status
+/configure
 /emacs.d/inits/provided-delayed-inits.el
 /emacs.d/inits/unprovided-delayed-inits.el
 /emacs.d/site-lisp/userloaddefs.el
