--- a/Makefile.in
+++ b/Makefile.in
@@ -66,6 +66,7 @@ xdgconfighomegitdir = $(xdgconfighomedir)/git
 xdgconfighomevlcdir = $(xdgconfighomedir)/vlc
 xdgconfighomezshdir = $(xdgconfighomedir)/zsh
 xdgconfighomezshfunctionsdir = $(xdgconfighomezshdir)/functions
+xdgconfighomezshosdir = $(xdgconfighomezshdir)/os
 sysconfdir = /etc
 
 -include $(srcdir)/Config/$(uname)
@@ -309,6 +310,11 @@ xdgconfighomezshfunctions_DATA = \
 	zsh/functions/zle/vi-cmd-mode-silently \
 	zsh/functions/zle/yank-clipboard
 
+xdgconfighomezshos_DATA = \
+	zsh/os/env \
+	zsh/os/login \
+	zsh/os/rc
+
 bin_SCRIPTS = \
 	bin/a \
 	bin/aa \
@@ -336,7 +342,7 @@ bin_SCRIPTS = \
 
 $(bin_SCRIPTS): bin/.dirstamp
 
-include $(srcdir)/os/os.mk
+-include $(srcdir)/os/$(uname)/os.mk
 include $(srcdir)/host/host.mk
 
 ifdef INCLUDE_VIM
@@ -403,6 +409,7 @@ $(call DIR,xdgconfighomegit)
 $(call DIR,xdgconfighomevlc)
 $(call DIR,xdgconfighomezsh,.)
 $(call DIR,xdgconfighomezshfunctions)
+$(call DIR,xdgconfighomezshos)
 
 R_bin_GEN = \
   $(V_GEN)rm -f $@ $@.tmp && \
