Determine os mk file to include during configuration

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@
 /bin/unpack
 /bin/update-context
 /bin/valgrind-ruby
+/build/config.guess
+/build/config.sub
 /build/install-sh
 /config.log
 /config.mk
