--- a/configure.ac
+++ b/configure.ac
@@ -2,6 +2,14 @@ AC_PREREQ([2.69])
 AC_INIT([dot-home], [1.0.0], [now@disu.se])
 AC_CONFIG_SRCDIR([configure.ac])
 AC_CONFIG_AUX_DIR([build])
+AC_CANONICAL_HOST
+AC_SUBST([os_mk])
+case $host_os in
+  cygwin) os_mk=$srcdir/os/Cygwin/os.mk ;;
+  darwin*) os_mk=$srcdir/os/Darwin/os.mk ;;
+  linux-*) os_mk=$srcdir/os/Linux/os.mk ;;
+  *) os_mk=/dev/null ;;
+esac
 AC_PROG_INSTALL
 AC_PROG_MKDIR_P
 AC_CONFIG_FILES([Makefile])
