--- a/bin/e.in
+++ b/bin/e.in
@@ -9,7 +9,7 @@ else
   : ${TMPDIR=/tmp}
   { d=`(umask 077 && mktemp -d "$TMPDIR/eXXXXXX") 2>/dev/null` &&
     test -n "$d" && test -d "$d"; } ||
-    { d=$TMPDIR/e$$$RANDOM; (umask 077 && mkdir "$d") 2>=/dev/null; } ||
+    { d=$TMPDIR/e$$$RANDOM; (umask 077 && mkdir "$d") 2>/dev/null; } ||
     { printf "%s: can’t create temporary directory" "`basename $0`"; exit 1; }
   trap 'rm -rf "$d"' 0 1 2 13 15
   t=$d/stdin
