Fix horribly broken e

--- a/bin/e.in
+++ b/bin/e.in
@@ -4,7 +4,7 @@ set -- --alternate-editor "" "$@"
 test "x$TERM" != xdumb && set -- -t "$@"
 
 if test -t 0; then
-  exec emacsclient $@"
+  exec emacsclient "$@"
 else
   : ${TMPDIR=/tmp}
   { d=`(umask 077 && mktemp -d "$TMPDIR/eXXXXXX") 2>/dev/null` &&
@@ -14,5 +14,5 @@ else
   trap 'rm -rf "$d"' 0 1 2 13 15
   t=$d/stdin
   cat > "$t" || exit 1
-  emacsclient $@" "$t"
+  emacsclient "$@" "$t"
 fi
